--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -174,11 +174,16 @@
     "# Navigation using __LIDAR__\n",
     "Robot arms use a _variety_ of sensors to be able to navigate different objects. By measuring distance to various objects to detect obstacles such as walls, furnitures etc. It provides real-time monitoring and feedback to the robot arm's control system, allowing it to adjust its movements and behavior based on the environment. It also increases the autonomy of the robot arm by allowing it to navigate and operate in complex environments without human intervention. This can be particularly useful in warehousing, logistics, or manufacturing, where robots need to operate in dynamic and unpredictable environments.\n",
     "\n",
-    "- In order to calculate the distance to the object we can use laser pulses to bounce to the object and then back to the sensor. We can use the equation to calculate the distance based on speed and time. However, since the electromagnetic waves go back and forth, we must divide by two to get the distance to the object. Here is the formula:\n",
+    "![](https://eu-images.contentstack.com/v3/assets/blt31d6b0704ba96e9d/blt4c46a271d01eb143/63abebe3d25aa95489bdd438/VelodyneLidar_DeliveryRobot_FoV.jpg)\n",
+    "\n",
+    "- In order to calculate the distance to the object we can use laser pulses to bounce to the object and then back to the sensor. We can use the equation to calculate the distance based on speed and time. However, since the electromagnetic waves go back and forth, we must divide by __two__ to get the distance to the object. Here is the formula:\n",
     "\n",
     "$$ distance = \\frac{speed-of-light * time-of-flight} {2}  $$\n",
     "\n",
-    "The _speed_ of __electromagnetic radiation__ is the _same_ as the __speed of light__ and the __time-of-flight__ measurement of the laser pulse: $$ 299,792,458m/s$$"
+    "__Where:__\n",
+    "- __distance__ is the distance between the lidar sensor and the object\n",
+    "- the speed of __electromagnetic radiation__ is the same _as_ the _constant_ __speed of light__ in a vacuum: $$ 299,792,458m/s$$\n",
+    "- __time-of-flight__ is the time it _takes_ for the __laser pulse__ to travel from the lidar sensor to the object and back to the sensor."
    ]
   },
   {
