--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -178,12 +178,65 @@
     "\n",
     "- In order to calculate the distance to the object we can use laser pulses to bounce to the object and then back to the sensor. We can use the equation to calculate the distance based on speed and time. However, since the electromagnetic waves go back and forth, we must divide by __two__ to get the distance to the object. Here is the formula:\n",
     "\n",
-    "$$ distance = \\frac{speed-of-light * time-of-flight} {2}  $$\n",
+    "$$ distance = \\frac{speed-of-light \\times time-of-flight} {2}  $$\n",
     "\n",
     "__Where:__\n",
     "- __distance__ is the distance between the lidar sensor and the object\n",
     "- the speed of __electromagnetic radiation__ is the same _as_ the _constant_ __speed of light__ in a vacuum: $$ 299,792,458m/s$$\n",
-    "- __time-of-flight__ is the time it _takes_ for the __laser pulse__ to travel from the lidar sensor to the object and back to the sensor."
+    "- [__time-of-flight__](https://www.analog.com/en/applications/technology/3d-time-of-flight.html#:~:text=3D%20time%20of%20flight%20(ToF)%20is%20a%20type%20of%20scanner,from%20a%20scene%20of%20interest) is the time it _takes_ for the __laser pulse__ to travel from the lidar sensor to the object and back to the sensor. It uses a __high power optical pulses__ in durations of __nanoseconds__: 10^-9 = $$0.000000001$$\n",
+    "\n",
+    "![time-of-flight](https://www.analog.com/-/media/analog/en/technologies/3d-time-of-flight-solution/tof-example2.svg?la=en&imgver=1)\n",
+    "\n",
+    "We can write a function that calculates the distance to an object from a measured time-of-flight:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "cpp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "#include <cmath>\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "int main()\n",
+    "{\n",
+    "    const double speed_of_light = 299792458.0;  // Speed of light in m/s\n",
+    "    double time_of_flight;                     // Time it takes for the laser pulse to travel to the object and back in seconds\n",
+    "    double distance;                           // Distance between the LIDAR sensor and the object in meters\n",
+    "    \n",
+    "    // Read in the measured time-of-flight in seconds from the LIDAR sensor\n",
+    "    cout << \"Enter time-of-flight in seconds: \";\n",
+    "    cin >> time_of_flight;\n",
+    "    \n",
+    "    // Calculate the distance to the object using the time-of-flight and the speed of light\n",
+    "    distance = (speed_of_light * time_of_flight) / 2.0;\n",
+    "    \n",
+    "    // Output the calculated distance to the object in meters\n",
+    "    cout << \"Distance to object is: \" << distance << \" meters\" << endl;\n",
+    "    \n",
+    "    return 0;\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example:\n",
+    "\n",
+    "30 ns (nanoseconds) = 3.0 x 10^-9 s\n",
+    "\n",
+    "__Input:__ 0.000000003\n",
+    "\n",
+    "__Output:__  Distance to object is: 0.449689 meters"
    ]
   },
   {
