--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -184,8 +184,8 @@
     "- __distance__ is the distance between the lidar sensor and the object\n",
     "- the speed of __electromagnetic radiation__ is the same _as_ the _constant_ __speed of light__ in a vacuum: $$ 299,792,458m/s$$\n",
     "- [__time-of-flight__](https://www.analog.com/en/applications/technology/3d-time-of-flight.html#:~:text=3D%20time%20of%20flight%20(ToF)%20is%20a%20type%20of%20scanner,from%20a%20scene%20of%20interest) is the time it _takes_ for the __laser pulse__ to travel from the lidar sensor to the object and back to the sensor. It uses a __high power optical pulses__ in durations of __nanoseconds__: 10^-9 = $$0.000000001$$\n",
-    "-\n",
-    "![time-of-flight](https://www.analog.com/-/media/analog/en/technologies/3d-time-of-flight-solution/tof-example2.svg?la=en&imgver=1)\n",
+    "\n",
+    "![time-of-flight](https://www.neuvition.com/wp-content/themes/twentytwenty/assets/images/titan-m1-r/titan-m1-r-scanning.gif)\n",
     "\n",
     "We can write a function that calculates the distance to an object from a measured time-of-flight:"
    ]
