--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -187,7 +187,9 @@
     "\n",
     "![](https://www.ednasia.com/wp-content/uploads/sites/3/2021/02/3D_ToF.jpg?w=960)\n",
     "\n",
-    "We can write a function that calculates the distance to an object from a measured time-of-flight:"
+    "We can write a function that calculates the distance to an object from a measured time-of-flight:\n",
+    "\n",
+    "Code [Here:](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/LIDAR_distance/Distance_lidar.cpp)"
    ]
   },
   {
