--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -314,6 +314,7 @@
     "Then we calculate the angle of the robotic arm using the formula:\n",
     "$$ angle = asin(\\frac{voltage}{L}) $$\n",
     "\n",
+    "$$ 1 nanosecond = 1.0E-9 seconds = 0,000000001 $$\n",
     "Here is an example code:"
    ]
   },
