--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -315,7 +315,7 @@
     "$$ angle = asin(\\frac{voltage}{L}) $$\n",
     "\n",
     "$$ 1 nanosecond = 1.0E-9 seconds = 0,000000001 $$\n",
-    "Here is an example code:"
+    "Here is an example [code](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/ADC_Voltage/ADC_Volt_Measure.cpp):"
    ]
   },
   {
