--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -385,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Output:\n",
+    "__Output:__\n",
     "\n",
     "ADC voltage step per second: 122.07 V/s\n",
     "\n",
