--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -294,7 +294,7 @@
     "\n",
     "__Note:__ That means the minimum change in the input which can be detected by the ADC is equal to 0,019V. __If__ the change in the input signal is less than e.g., __1.25V__, then it won't get detected by this given ADC. On the other end, if the __full-scale range__ of the ADC is __1V__, which is the resolution in __bits__:\n",
     "$$ \\frac{1V}{2^8} = 0,00390625V = 3,90 mV$$ \n",
-    "So now, the minimum change which can be detected by the ADC is equal to 3,90mV. So, in this way, by changing the reference voltage, the minimum detectable voltage can be increased. But at the same time, the conversion range of the ADC will also reduce. So, in a way, we can say that there is a trade-off for changing the reference voltage of the given ADC. But keeping the same reference voltage, by increasing the number of bits, we can increase the resolution (the amount of signal it we want it to receive which can be fixed or manipulated).\n",
+    "So now, the minimum change which can be detected by the ADC is equal to 3,90mV. So, in this way, by changing the reference voltage, the minimum detectable voltage can be increased. But at the same time, the conversion range of the ADC will also reduce. So, in a way, we can say that there is a trade-off for changing the reference voltage of the given ADC. But keeping the same reference voltage, by increasing the number of bits, we can increase the resolution (the amount of signal we want it to receive which can be fixed or manipulated).\n",
     "\n",
     "__Note:__ The choice of reference voltage depends on the specific application and the requirements for accuracy and resolution. It's essential to choose a reference voltage that is stable and accurate to ensure that the ADC produces reliable and accurate measurements.\n",
     "\n",
@@ -319,7 +319,7 @@
     "Then we calculate the angle of the robotic arm using the formula:\n",
     "$$ angle = asin(\\frac{voltage}{L}) $$\n",
     "\n",
-    "$$ 1 nanosecond = 1.0E-9 seconds = 0,000000001 $$\n",
+    "$$ 1 nanosecond = 1.0E-9 seconds = 0,000000001 seconds $$\n",
     "Here is an example [code](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/ADC_Voltage/ADC_Volt_Measure.cpp):"
    ]
   },
@@ -398,6 +398,14 @@
     "Voltage: 1.50635 V\n",
     "\n",
     "Robotic arm angle: nan radians"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Electricity usage"
    ]
   },
   {
