--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -405,7 +405,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Electricity usage"
+    "# Electricity Consumption\n",
+    "\n",
+    "## During __rest__\n",
+    "The electricity consumption of a robotic arm at rest depends on several factors:\n",
+    "- the __power rating__ of the __motors__ and __control systems__\n",
+    "- the _regulation_ of the system, and the duration of the __program/operation__"
    ]
   },
   {
