--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -407,8 +407,10 @@
    "source": [
     "# Electricity Consumption\n",
     "\n",
+    "![energy consumption](https://www.mdpi.com/energies/energies-12-00027/article_deploy/html/images/energies-12-00027-g013.png)\n",
+    "\n",
     "## During __rest__\n",
-    "The electricity consumption of a robotic arm at rest depends on several factors:\n",
+    "The [electricity consumption](https://www.energuide.be/en/questions-answers/how-can-i-calculate-the-consumption-of-an-electrical-appliance/94/) of a robotic arm at rest depends on several factors:\n",
     "- the __power rating__ of the __motors__ and __control systems__\n",
     "- the _regulation_ of the system, and the duration of the __program/operation__"
    ]
