--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -412,7 +412,10 @@
     "## During __rest__\n",
     "The [electricity consumption](https://www.energuide.be/en/questions-answers/how-can-i-calculate-the-consumption-of-an-electrical-appliance/94/) of a robotic arm at rest depends on several factors:\n",
     "- the __power rating__ of the __motors__ and __control systems__\n",
-    "- the _regulation_ of the system, and the duration of the __program/operation__"
+    "- the _regulation_ of the system, and the duration of the __program/operation__\n",
+    "\n",
+    "The _formula_ for calculating the electricity consumption of a __robotic arm__ at __rest__ is:\n",
+    "$$ E = Power rating \\times Time"
    ]
   },
   {
