--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -415,7 +415,11 @@
     "- the _regulation_ of the system, and the duration of the __program/operation__\n",
     "\n",
     "The _formula_ for calculating the electricity consumption of a __robotic arm__ at __rest__ is:\n",
-    "$$ E = Power rating \\times Time"
+    "$$ E = Power rating \\times Time $$\n",
+    "\n",
+    "__Where:__\n",
+    "- __Power rating:__ The rated power of the robotic arm's motors and control systems, typically measured in __watts (W)__ or __kilo__ _watts_ __(kW).__\n",
+    "- __Time:__ the duration of operation, typically measured in __hours (h).__"
    ]
   },
   {
