--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -419,7 +419,13 @@
     "\n",
     "__Where:__\n",
     "- __Power rating:__ The rated power of the robotic arm's motors and control systems, typically measured in __watts (W)__ or __kilo__ _watts_ __(kW).__\n",
-    "- __Time:__ the duration of operation, typically measured in __hours (h).__"
+    "- __Time:__ the duration of operation, typically measured in __hours (h).__\n",
+    "\n",
+    "__Example:__\n",
+    "A robotic arm _has_ a __power rating__ of __100 W__ and is at __rest__ for __10__ hours, the electricity consumption would be:\n",
+    "$$ E = 100W \\times 10h = 1000Wh = 1kWh $$\n",
+    "\n",
+    "__Note:__ this formula assumes that the robotic arm is not performing any tasks and is simply in a __standby or idle mode__. If the robotic arm is actively performing tasks, the electricity consumption will depend on the type of tasks being performed and the efficiency of the system."
    ]
   },
   {
