--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -405,27 +405,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Electricity Consumption\n",
+    "# Energy Consumption\n",
     "\n",
-    "![energy consumption](https://www.mdpi.com/energies/energies-12-00027/article_deploy/html/images/energies-12-00027-g013.png)\n",
-    "\n",
-    "## During __rest__\n",
-    "The [electricity consumption](https://www.energuide.be/en/questions-answers/how-can-i-calculate-the-consumption-of-an-electrical-appliance/94/) of a robotic arm at rest depends on several factors:\n",
-    "- the __power rating__ of the __motors__ and __control systems__\n",
+    "The [electricity consumption](https://www.energuide.be/en/questions-answers/how-can-i-calculate-the-consumption-of-an-electrical-appliance/94/) of a robotic arm _depends_ on __several factors__:\n",
+    "- the __power rating__ of the __motors_ and __control systems__\n",
     "- the _regulation_ of the system, and the duration of the __program/operation__\n",
     "\n",
-    "The _formula_ for calculating the electricity consumption of a __robotic arm__ at __rest__ is:\n",
-    "$$ E = Power rating \\times Time $$\n",
+    "![energy consumption](https://www.mdpi.com/energies/energies-12-00027/article_deploy/html/images/energies-12-00027-g013.png)\n",
     "\n",
     "__Where:__\n",
     "- __Power rating:__ The rated power of the robotic arm's motors and control systems, typically measured in __watts (W)__ or __kilo__ _watts_ __(kW).__\n",
     "- __Time:__ the duration of operation, typically measured in __hours (h).__\n",
     "\n",
+    "## During __idle__\n",
+    "\n",
+    "The _formula_ for calculating the electricity consumption of a __robotic arm__ at __rest__ is:\n",
+    "$$ E = Power rating \\times Time $$\n",
+    "\n",
     "__Example:__\n",
-    "A robotic arm _has_ a __power rating__ of __100 W__ and is at __rest__ for __10__ hours, the electricity consumption would be:\n",
+    "\n",
+    "A __power rating__ of __100 W__ and is at __rest__ for __10 hours__, the electricity consumption would be:\n",
     "$$ E = 100W \\times 10h = 1000Wh = 1kWh $$\n",
     "\n",
-    "__Note:__ this formula assumes that the robotic arm is not performing any tasks and is simply in a __standby or idle mode__. If the robotic arm is actively performing tasks, the electricity consumption will depend on the type of tasks being performed and the efficiency of the system."
+    "__Note:__ this formula assumes that the robotic arm is not performing any tasks and is simply in a __standby or idle mode__. If the robotic arm is actively performing tasks, the electricity consumption will depend on the type of tasks being performed and the efficiency of the system.\n",
+    "\n",
+    "## During __operation__\n",
+    "The _formula_ for calculating the electricity consumption of a __robotic arm__ when it is __working__ is:\n",
+    "$$ E = Power rating \\times Time \\times Efficiency $$\n",
+    "\n",
+    "__Where:__\n",
+    "- __Efficiency:__ of the robotic arm system, which is the __ratio__ of useful work performed by the arm to the total __energy__ _input_. Efficiency is typically _expressed_ as a __percentage__.\n",
+    "\n",
+    "__Example:__\n",
+    "\n",
+    "A __power rating__ of __1000W (1kWh)__ and is working for 2 hours with an efficiency of __80%__, the electricity consumption would be:\n",
+    "$$ E = 1000W \\times 2 h \\times 0.8 = 1600 Wh = 1.6 kWh $$\n",
+    "\n",
+    "__Note:__ this formula is a simple version, and the actual electricity consumption of a robotic arm during operation _may_ __vary depending__ on the specific design and operation of the arm."
    ]
   },
   {
