--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -408,7 +408,7 @@
     "# Energy Consumption\n",
     "\n",
     "The [electricity consumption](https://www.energuide.be/en/questions-answers/how-can-i-calculate-the-consumption-of-an-electrical-appliance/94/) of a robotic arm _depends_ on __several factors__:\n",
-    "- the __power rating__ of the __motors_ and __control systems__\n",
+    "- the __power rating__ of the __motors and control systems__\n",
     "- the _regulation_ of the system, and the duration of the __program/operation__\n",
     "\n",
     "![energy consumption](https://www.mdpi.com/energies/energies-12-00027/article_deploy/html/images/energies-12-00027-g013.png)\n",
@@ -442,6 +442,16 @@
     "$$ E = 1000W \\times 2 h \\times 0.8 = 1600 Wh = 1.6 kWh $$\n",
     "\n",
     "__Note:__ this formula is a simple version, and the actual electricity consumption of a robotic arm during operation _may_ __vary depending__ on the specific design and operation of the arm."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Statistic on Energy Consumption\n",
+    "\n",
+    "## Currently on work..."
    ]
   },
   {
