--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -26,7 +26,7 @@
     "- __Control system__ is the brain of the robotic arm, which directs the movement and operation of the arm. It is commonly run in a computer, software, and control electronics.\n",
     "\n",
     "# Control robot arm through a mobile application\n",
-    "In this code [here](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/Mobile%20App/Mobile_app.cpp), the __read_signals_from_moile_app()__ function reads the signals from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2. \n",
+    "In this code [here](https://github.com/Julieanna97/Robot-Arm-Research/blob/master/Mobile%20App/Mobile_app.cpp), the __read_signals_from_mobile_app()__ function reads the signals from the mobile application to the robot arm in binary string, which is converted using __stoi__ with a base of 2. \n",
     "\n",
     "It sends one uint16 (__2__ bytes) at a time, encoded like this:\n",
     "- bit __1__ - __SIGNAL_UP__\n",
@@ -40,11 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// Define the signals to control the robot arm\n",
@@ -57,11 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// Function to read signals from mobile app (replace with actual code)\n",
@@ -84,11 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// Function to control the robot arm based on signals\n",
@@ -127,11 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "int main() {\n",
@@ -195,11 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#include <iostream>\n",
@@ -326,11 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "cpp"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#include <iostream>\n",
@@ -430,7 +406,7 @@
     "__Note:__ this formula assumes that the robotic arm is not performing any tasks and is simply in a __standby or idle mode__. If the robotic arm is actively performing tasks, the electricity consumption will depend on the type of tasks being performed and the efficiency of the system.\n",
     "\n",
     "## During __operation__\n",
-    "The _formula_ for calculating the electricity consumption of a __robotic arm__ when it is __working__ is:\n",
+    "The _formula_ for calculating the electricity consumption of a __robotic arm__ when it is __operating__ is:\n",
     "$$ E = Power rating \\times Time \\times Efficiency $$\n",
     "\n",
     "__Where:__\n",
@@ -441,7 +417,9 @@
     "A __power rating__ of __1000W (1kWh)__ and is working for 2 hours with an efficiency of __80%__, the electricity consumption would be:\n",
     "$$ E = 1000W \\times 2 h \\times 0.8 = 1600 Wh = 1.6 kWh $$\n",
     "\n",
-    "__Note:__ this formula is a simple version, and the actual electricity consumption of a robotic arm during operation _may_ __vary depending__ on the specific design and operation of the arm."
+    "__Note:__ this formula is a simple version, and the actual electricity consumption of a robotic arm during operation _may_ __vary depending__ on the specific design and operation of the arm.\n",
+    "\n",
+    "## Robot's battery span"
    ]
   },
   {
@@ -451,7 +429,12 @@
    "source": [
     "# Statistic on Energy Consumption\n",
     "\n",
-    "## Currently on work..."
+    "The purpose of [statistics](https://www.tandfonline.com/doi/pdf/10.1080/19397038.2020.1805040) is to have a further understanding of the robot arm's energy usage over its working lifetime.\n",
+    "The benifits of continuous monitoring of e.g., industrial robot arm would likely be able to identify an industrial robot's breakdown overtime or can indicate when it needs to be repaired.\n",
+    "Other reasons including:\n",
+    "- Can help identify areas where energy efficiency improvements can be done or where the robot arm may be consuming more energy than necessary.\n",
+    "\n",
+    "We'll take a look by examining the power consumption of each joint, aka."
    ]
   },
   {
