--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -434,7 +434,8 @@
     "Other reasons including:\n",
     "- Can help identify areas where energy efficiency improvements can be done or where the robot arm may be consuming more energy than necessary.\n",
     "\n",
-    "We'll take a look by examining the power consumption of each joint, aka."
+    "We'll take a look by examining the power consumption of each joint, aka.\n",
+    "![](https://www.mdpi.com/applsci/applsci-10-02223/article_deploy/html/images/applsci-10-02223-g001.png)"
    ]
   },
   {
