--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -434,8 +434,18 @@
     "Other reasons including:\n",
     "- Can help identify areas where energy efficiency improvements can be done or where the robot arm may be consuming more energy than necessary.\n",
     "\n",
-    "We'll take a look by examining the power consumption of each joint, aka.\n",
-    "![](https://www.mdpi.com/applsci/applsci-10-02223/article_deploy/html/images/applsci-10-02223-g001.png)"
+    "__1st step__ is to look at the power consumption of each joint, aka.\n",
+    "![](https://www.mdpi.com/applsci/applsci-10-02223/article_deploy/html/images/applsci-10-02223-g001.png)\n",
+    "including sensors, controllers, etc. This information can typically be found in the manufacturer's specifications or through testing. Other factors that contribute to energy consumption are:\n",
+    "- __payload, velocity and acceleration__\n",
+    "- For example, researchers found that along with payload, energy consumption increased from 2 to 10 Joules.\n",
+    "- There's many factors that can contribute to increased EC. Which is why it's essential to do study on statistics to compare dozens of robots. By taking this into consideration, the robot's movements can be smoothen out to minimise acceleration and optimise energy consumption.\n",
+    "\n",
+    "__2nd step__ is to calculate the total power consumption.\n",
+    "\n",
+    "__3rd step__ is to test how long the robot arm will operate.\n",
+    "\n",
+    "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh) or kilowatt-hours(kWh).__"
    ]
   },
   {
