--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -427,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistic on Energy Consumption\n",
+    "# Statistics on Energy Consumption\n",
     "\n",
     "The purpose of [statistics](https://www.tandfonline.com/doi/pdf/10.1080/19397038.2020.1805040) is to have a further understanding of the robot arm's energy usage over its working lifetime.\n",
     "The benifits of continuous monitoring of e.g., industrial robot arm would likely be able to identify an industrial robot's breakdown overtime or can indicate when it needs to be repaired.\n",
@@ -436,16 +436,18 @@
     "\n",
     "__1st step__ is to look at the power consumption of each joint, aka.\n",
     "![](https://www.mdpi.com/applsci/applsci-10-02223/article_deploy/html/images/applsci-10-02223-g001.png)\n",
-    "including sensors, controllers, etc. This information can typically be found in the manufacturer's specifications or through testing. Other factors that contribute to energy consumption are:\n",
-    "- __payload, velocity and acceleration__\n",
-    "- For example, researchers found that along with payload, energy consumption increased from 2 to 10 Joules.\n",
-    "- There's many factors that can contribute to increased EC. Which is why it's essential to do study on statistics to compare dozens of robots. By taking this into consideration, the robot's movements can be smoothen out to minimise acceleration and optimise energy consumption.\n",
+    "including sensors, controllers, etc. This information can typically be found in the __manufacturer's specifications__ or _through_ __testing__. Other factors that contribute to energy consumption are:\n",
+    "- __payload, velocity, acceleration and temperature__\n",
+    "- For example, researchers found that along with payload (the weight the robot can lift), energy consumption increased from 2 to 10 Joules.\n",
+    "- There's many factors that can contribute to increased EC. Which is why it's essential to do study on statistics to compare dozens of robots. By taking this into consideration, the robot's movements can e.g., be smoothen out to minimise acceleration and optimise energy consumption etc.\n",
     "\n",
     "__2nd step__ is to calculate the total power consumption.\n",
     "\n",
     "__3rd step__ is to test how long the robot arm will operate.\n",
     "\n",
-    "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh) or kilowatt-hours(kWh).__"
+    "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh) or kilowatt-hours(kWh).__\n",
+    "\n",
+    "For example, let's say I have collected data of 10 robot arm to see the average value of energy consumption over 8 hours of __operation__ _period time._"
    ]
   },
   {
