--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -433,6 +433,7 @@
     "The benifits of continuous monitoring of e.g., industrial robot arm would likely be able to identify an industrial robot's breakdown overtime or can indicate when it needs to be repaired.\n",
     "Other reasons including:\n",
     "- Can help identify areas where energy efficiency improvements can be done or where the robot arm may be consuming more energy than necessary.\n",
+    "- __Note:__ This applies only to robot arm that operates the same task like pick up items, not different tasks. As each robot arm manufacturer build robot arm for __different__ purposes. It doesn't apply with different robot arm manufacturers because each robot needs to adapt to different tasks and different motors have different requirements in order for the robot to function __CORECTLY!__\n",
     "\n",
     "__1st step__ is to look at the power consumption of each joint, aka.\n",
     "![](https://www.mdpi.com/applsci/applsci-10-02223/article_deploy/html/images/applsci-10-02223-g001.png)\n",
@@ -445,9 +446,28 @@
     "\n",
     "__3rd step__ is to test how long the robot arm will operate.\n",
     "\n",
-    "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh) or kilowatt-hours(kWh).__\n",
+    "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh).__\n",
     "\n",
-    "For example, let's say I have collected data of 10 robot arm to see the average value of energy consumption over 8 hours of __operation__ _period time._"
+    "### During operation: \n",
+    "__For example__, let's say I have collected __data__ of __10__ robot arm with the same  to see the average value of energy consumption __over 8 hours__ of __operation__ _period time._ With energy input to __80%.__\n",
+    "\n",
+    "Formula for calculating energy consumption during operation is:\n",
+    "$$ 2000W \\times 8 hours \\times 0.8 = 12,800 W = 12,8kWh $$\n",
+    "\n",
+    "1. We need to calculate the mean energy consumption by adding up all the data points and divide by the total number of data points.\n",
+    "\n",
+    "__Table of EC:__\n",
+    "$$ 2000, 1500, 3000, 4500, 3200, 1700, 5000, 6000, 4500, 3600 Watts$$\n",
+    "\n",
+    "2. __Calculate__ the _mean_ by adding up all the data values and dividing the total number of data points. In this example we _divide_ by __10.__\n",
+    "\n",
+    "$$ \\frac {2000, 1500, 3000, 4500, 3200, 1700, 5000, 6000, 4500, 3600 Watts} {10}$$\n",
+    "\n",
+    "\n",
+    "<!-- Energy consumption table -->\n",
+    "| |  |  |\n",
+    "| -----| ------| ------|\n",
+    "|  |  |  |"
    ]
   },
   {
