--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -449,7 +449,7 @@
     "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh).__\n",
     "\n",
     "### During operation: \n",
-    "__For example__, let's say I have collected __data__ of __10__ robot arm with the same  to see the average value of energy consumption __over 8 hours__ of __operation__ _period time._ With energy input to __80%.__\n",
+    "__For example__, let's say I have collected __data__ of __10__ robot arm with the same manufacturer to see the average value of energy consumption __over 8 hours__ of __operation__ _period time._ With energy input to __80%.__\n",
     "\n",
     "Formula for calculating energy consumption during operation is:\n",
     "$$ 2000W \\times 8 hours \\times 0.8 = 12,800 W = 12,8kWh $$\n",
