--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -433,7 +433,7 @@
     "The benifits of continuous monitoring of e.g., industrial robot arm would likely be able to identify an industrial robot's breakdown overtime or can indicate when it needs to be repaired.\n",
     "Other reasons including:\n",
     "- Can help identify areas where energy efficiency improvements can be done or where the robot arm may be consuming more energy than necessary.\n",
-    "- __Note:__ This applies only to robot arm that operates the same task like pick up items, not different tasks. As each robot arm manufacturer build robot arm for __different__ purposes. It doesn't apply with different robot arm manufacturers because each robot needs to adapt to different tasks and different motors have different requirements in order for the robot to function __CORECTLY!__\n",
+    "- __Note:__ This applies only to robot arm that operates the same task like pick up items, not different tasks. As each robot arm manufacturer build robot arm for __different__ purposes. It doesn't apply with different kinds of robot arm because _each_ __robot__ have different models and tasks _built-in_ within them as well as different motors have different requirements in order for the robot to function __CORRECTLY!__\n",
     "\n",
     "__1st step__ is to look at the power consumption of each joint, aka.\n",
     "![](https://www.mdpi.com/applsci/applsci-10-02223/article_deploy/html/images/applsci-10-02223-g001.png)\n",
@@ -454,15 +454,18 @@
     "Formula for calculating energy consumption during operation is:\n",
     "$$ 2000W \\times 8 hours \\times 0.8 = 12,800 W = 12,8kWh $$\n",
     "\n",
+    "### Standard deviation\n",
+    "\n",
     "1. We need to calculate the mean energy consumption by adding up all the data points and divide by the total number of data points.\n",
     "\n",
-    "__Table of EC:__\n",
+    "__Table of EC in Watts:__\n",
     "$$ 2000, 1500, 3000, 4500, 3200, 1700, 5000, 6000, 4500, 3600 Watts$$\n",
     "\n",
     "2. __Calculate__ the _mean_ by adding up all the data values and dividing the total number of data points. In this example we _divide_ by __10.__\n",
     "\n",
     "$$ \\frac {2000, 1500, 3000, 4500, 3200, 1700, 5000, 6000, 4500, 3600 Watts} {10}$$\n",
     "\n",
+    "$$ Mean value(ms) = 3500W = 3,5 kWh $$\n",
     "\n",
     "<!-- Energy consumption table -->\n",
     "| |  |  |\n",
