--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -456,9 +456,9 @@
     "\n",
     "### Standard deviation\n",
     "\n",
-    "1. We need to calculate the mean energy consumption by adding up all the data points and divide by the total number of data points.\n",
+    "1. When we need to calculate the _standard deviation_ we start by calculating the mean value of the energy consumption by adding up all the data points and divide by the total number of data points.\n",
     "\n",
-    "__Table of EC in Watts:__\n",
+    "__EC Values:__\n",
     "$$ 2000, 1500, 3000, 4500, 3200, 1700, 5000, 6000, 4500, 3600 Watts$$\n",
     "\n",
     "2. __Calculate__ the _mean_ by adding up all the data values and dividing the total number of data points. In this example we _divide_ by __10.__\n",
@@ -467,10 +467,15 @@
     "\n",
     "$$ Mean value(ms) = 3500W = 3,5 kWh $$\n",
     "\n",
+    "3. Now we can calculate the deviation from the mean for each of the __EC__ observation _values._\n",
+    "\n",
+    "__EC Table deviation:__\n",
+    "\n",
+    "\n",
     "<!-- Energy consumption table -->\n",
-    "| |  |  |\n",
+    "| $$Robot arm Model 1$$| $$m_s = 3500$$ |  |\n",
     "| -----| ------| ------|\n",
-    "|  |  |  |"
+    "|  $$x_s$$| $$x_s - m_s$$ | |"
    ]
   },
   {
