--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -473,9 +473,11 @@
     "\n",
     "\n",
     "<!-- Energy consumption table -->\n",
-    "| $$Robot arm Model 1$$| $$m_s = 3500$$ |  |\n",
+    "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
     "| -----| ------| ------|\n",
-    "|  $$x_s$$| $$x_s - m_s$$ | |"
+    "| $$x_s$$ | $$x_s - m_s$$ |\n",
+    "| $$1500$$ | $$-1200$$ |\n",
+    "| $$1700$$ | $$-1800$$ |"
    ]
   },
   {
