--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -476,8 +476,16 @@
     "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
     "| -----| ------| ------|\n",
     "| $$x_s$$ | $$x_s - m_s$$ |\n",
-    "| $$1500$$ | $$-1200$$ |\n",
-    "| $$1700$$ | $$-1800$$ |"
+    "| $$1500$$ | $$-2000$$ |\n",
+    "| $$1700$$ | $$-1800$$ |\n",
+    "| $$2000$$ | $$-1500$$ |\n",
+    "| $$3000$$ | $$-500$$ |\n",
+    "| $$3200$$ | $$-300$$ |\n",
+    "| $$3600$$ | $$100$$ |\n",
+    "| $$4500$$ | $$1000$$ |\n",
+    "| $$4500$$ | $$1000$$ |\n",
+    "| $$5000$$ | $$1500$$ |\n",
+    "| $$6000$$ | $$2500$$ |"
    ]
   },
   {
@@ -542,7 +550,7 @@
     "\n",
     "Lastly, we calculate the accuracy error as the difference between the average distance and the ideal distance of e.g., __7.0__ using absolute.\n",
     "$$ abs(15 - 7.0) $$\n",
-    "So the __accuracy error__ is: __8__"
+    "So the __accuracy error__ is: __8__ _mm_"
    ]
   }
  ],
