--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -429,11 +429,9 @@
    "source": [
     "# Statistics on Energy Consumption\n",
     "\n",
-    "The purpose of [statistics](https://www.tandfonline.com/doi/pdf/10.1080/19397038.2020.1805040) is to have a further understanding of the robot arm's energy usage over its working lifetime.\n",
-    "The benifits of continuous monitoring of e.g., industrial robot arm would likely be able to identify an industrial robot's breakdown overtime or can indicate when it needs to be repaired.\n",
-    "Other reasons including:\n",
-    "- Can help identify areas where energy efficiency improvements can be done or where the robot arm may be consuming more energy than necessary.\n",
-    "- __Note:__ This applies only to robot arm that operates the same task like pick up items, not different tasks. As each robot arm manufacturer build robot arm for __different__ purposes. It doesn't apply with different kinds of robot arm because _each_ __robot__ have different models and tasks _built-in_ within them as well as different motors have different requirements in order for the robot to function __CORRECTLY!__\n",
+    "The purpose of standard deviation is to gain insight into the variability of energy usage and identify areas for improvement to optimize the robot arm's energy efficiency.\n",
+    "\n",
+    "- __Note:__ Make sure to __GATHER__ data for the same type of __task or operation__ performed by the robot arm during trial. This __DOES NOT__ apply for different robots as each robot has unique tasks and different __requirements__ in _order_ to function __PROPERLY.__\n",
     "\n",
     "__1st step__ is to look at the power consumption of each joint, aka.\n",
     "![](https://www.mdpi.com/applsci/applsci-10-02223/article_deploy/html/images/applsci-10-02223-g001.png)\n",
@@ -449,7 +447,7 @@
     "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh).__\n",
     "\n",
     "### During operation: \n",
-    "__For example__, let's say I have collected __data__ of __10__ robot arm with the same manufacturer to see the average value of energy consumption __over 8 hours__ of __operation__ _period time._ With energy input to __80%.__\n",
+    "__For example__, let's say I have collected __data__ of __10__ robot arm in the same manufacture to see the average value of energy consumption _within_ a __week over 8 hours__ of __operation__ _period._ With energy input to __80%.__\n",
     "\n",
     "Formula for calculating energy consumption during operation is:\n",
     "$$ 2000W \\times 8 hours \\times 0.8 = 12,800 W = 12,8kWh $$\n",
