--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -429,7 +429,7 @@
    "source": [
     "# Statistics on Energy Consumption\n",
     "\n",
-    "The purpose of standard deviation is to gain insight into the variability of energy usage and identify areas for improvement to optimize the robot arm's energy efficiency.\n",
+    "I will be __using standard deviation__ for EC to gain insight into the variability of energy usage and identify areas for improvement to optimize the robot arm's energy efficiency.\n",
     "\n",
     "- __Note:__ Make sure to __GATHER__ data for the same type of __task or operation__ performed by the robot arm during trial. This __DOES NOT__ apply for different robots as each robot has unique tasks and different __requirements__ in _order_ to function __PROPERLY.__\n",
     "\n",
