--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -483,7 +483,13 @@
     "| $$4500$$ | $$1000$$ |\n",
     "| $$4500$$ | $$1000$$ |\n",
     "| $$5000$$ | $$1500$$ |\n",
-    "| $$6000$$ | $$2500$$ |"
+    "| $$6000$$ | $$2500$$ |\n",
+    "\n",
+    "Now that I have calculated the deviation from the mean for each EC value, I will square these deviations in the formula:\n",
+    "$$ \\sigma_s = \\sqrt{ \\Sigma(x_s-m_s)^2 \\over n} \n",
+    "= \\sqrt{ xx \\over xx} \n",
+    "\\approx xx\n",
+    "$$"
    ]
   },
   {
