--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -473,7 +473,7 @@
     "<!-- Energy consumption table -->\n",
     "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
     "| -----| ------| ------|\n",
-    "| $$x_s$$ | $$x_s - m_s$$ |\n",
+    "| $$x_s$$ | $$(x_s - m_s)$$ |\n",
     "| $$1500$$ | $$-2000$$ |\n",
     "| $$1700$$ | $$-1800$$ |\n",
     "| $$2000$$ | $$-1500$$ |\n",
@@ -485,7 +485,25 @@
     "| $$5000$$ | $$1500$$ |\n",
     "| $$6000$$ | $$2500$$ |\n",
     "\n",
-    "Now that I have calculated the deviation from the mean for each EC value, I will square these deviations in the formula:\n",
+    "Now that I have calculated the deviation from the mean for each EC value, I will square these deviations in the following table:\n",
+    "\n",
+    "<!-- Energy consumption table -->\n",
+    "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
+    "| -----| ------| ------|\n",
+    "| $$x_s$$ | $$(x_s - m_s)^2$$ |\n",
+    "| $$1500$$ | $$4,000,000$$ |\n",
+    "| $$1700$$ | $$3,240,000$$ |\n",
+    "| $$2000$$ | $$2,250,000$$ |\n",
+    "| $$3000$$ | $$250,000$$ |\n",
+    "| $$3200$$ | $$90,000$$ |\n",
+    "| $$3600$$ | $$10,000$$ |\n",
+    "| $$4500$$ | $$1,000,000$$ |\n",
+    "| $$4500$$ | $$1,000,000$$ |\n",
+    "| $$5000$$ | $$2,250,000$$ |\n",
+    "| $$6000$$ | $$36,000,000$$ |\n",
+    "\n",
+    "Now I will _sum_ the __squared deviation:__\n",
+    "\n",
     "$$ \\sigma_s = \\sqrt{ \\Sigma(x_s-m_s)^2 \\over n} \n",
     "= \\sqrt{ xx \\over xx} \n",
     "\\approx xx\n",
