--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -438,7 +438,7 @@
     "including sensors, controllers, etc. This information can typically be found in the __manufacturer's specifications__ or _through_ __testing__. Other factors that contribute to energy consumption are:\n",
     "- __payload, velocity, acceleration and temperature__\n",
     "- For example, researchers found that along with payload (the weight the robot can lift), energy consumption increased from 2 to 10 Joules.\n",
-    "- There's many factors that can contribute to increased EC. Which is why it's essential to do study on statistics to compare dozens of robots. By taking this into consideration, the robot's movements can e.g., be smoothen out to minimise acceleration and optimise energy consumption etc.\n",
+    "- There's many factors that can contribute to increased EC. By taking this into consideration, the robot's movements can e.g., be smoothen out to minimise acceleration and optimise energy consumption etc.\n",
     "\n",
     "__2nd step__ is to calculate the total power consumption.\n",
     "\n",
@@ -447,10 +447,8 @@
     "__4th step__ Once the total power consumption and operating time have been figured, multiply the 2 values together to calculate the total energy consumption. The __units__ for __energy consumption__ are usually measured in __watt-hours(Wh).__\n",
     "\n",
     "### During operation: \n",
-    "__For example__, let's say I have collected __data__ of __10__ robot arm in the same manufacture to see the average value of energy consumption _within_ a __week over 8 hours__ of __operation__ _period._ With energy input to __80%.__\n",
+    "__For example__, let's say I have collected __data__ of __10__ robot arm in the same manufacture to see the average value of energy consumption _within_ __3 months over 8 hours__ of __operation__ _period._ With energy input to __80%.__\n",
     "\n",
-    "Formula for calculating energy consumption during operation is:\n",
-    "$$ 2000W \\times 8 hours \\times 0.8 = 12,800 W = 12,8kWh $$\n",
     "\n",
     "### Standard deviation\n",
     "\n",
@@ -485,7 +483,7 @@
     "| $$5000$$ | $$1500$$ |\n",
     "| $$6000$$ | $$2500$$ |\n",
     "\n",
-    "Now that I have calculated the deviation from the mean for each EC value, I will square these deviations in the following table:\n",
+    "Now that I have _calculated_ the deviation from the mean for each EC value, I will __square__ these deviations in the following table:\n",
     "\n",
     "<!-- Energy consumption table -->\n",
     "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
@@ -505,9 +503,11 @@
     "Now I will _sum_ the __squared deviation:__\n",
     "\n",
     "$$ \\sigma_s = \\sqrt{ \\Sigma(x_s-m_s)^2 \\over n} \n",
-    "= \\sqrt{ xx \\over xx} \n",
-    "\\approx xx\n",
-    "$$"
+    "= \\sqrt{ 50,090,000 \\over 10} \n",
+    "\\approx 5,565,555W\n",
+    "$$\n",
+    "\n",
+    "$$ mean = 5009 kWh$$"
    ]
   },
   {
