--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -453,6 +453,7 @@
     "### Standard deviation\n",
     "\n",
     "1. When we need to calculate the _standard deviation_ we start by calculating the mean value of the energy consumption by adding up all the data points and divide by the total number of data points.\n",
+    "$$ \\bar{x}(mean) = \\frac{sum}{n} $$\n",
     "\n",
     "__EC Values:__\n",
     "$$ 2000, 1500, 3000, 4500, 3200, 1700, 5000, 6000, 4500, 3600 Watts$$\n",
@@ -463,42 +464,25 @@
     "\n",
     "$$ Mean value(ms) = 3500W = 3,5 kWh $$\n",
     "\n",
-    "3. Now we can calculate the deviation from the mean for each of the __EC__ observation _values._\n",
+    "3. Now we can calculate the deviation from the mean for each of the __EC__ observation _values._ Then I will __square__ these deviations in the following table:\n",
     "\n",
     "__EC Table deviation:__\n",
     "\n",
-    "\n",
     "<!-- Energy consumption table -->\n",
     "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
     "| -----| ------| ------|\n",
-    "| $$x_s$$ | $$(x_s - m_s)$$ |\n",
-    "| $$1500$$ | $$-2000$$ |\n",
-    "| $$1700$$ | $$-1800$$ |\n",
-    "| $$2000$$ | $$-1500$$ |\n",
-    "| $$3000$$ | $$-500$$ |\n",
-    "| $$3200$$ | $$-300$$ |\n",
-    "| $$3600$$ | $$100$$ |\n",
-    "| $$4500$$ | $$1000$$ |\n",
-    "| $$4500$$ | $$1000$$ |\n",
-    "| $$5000$$ | $$1500$$ |\n",
-    "| $$6000$$ | $$2500$$ |\n",
+    "| $$x_s$$ | $$(x_s - m_s)$$ | $$(x_s - m_s)^2$$ |\n",
+    "| $$1500$$ | $$-2000$$ | $$4,000,000$$ |\n",
+    "| $$1700$$ | $$-1800$$ | $$3,240,000$$ |\n",
+    "| $$2000$$ | $$-1500$$ | $$2,250,000$$ |\n",
+    "| $$3000$$ | $$-500$$ | $$250,000$$ |\n",
+    "| $$3200$$ | $$-300$$ | $$90,000$$ |\n",
+    "| $$3600$$ | $$100$$ | $$10,000$$ |\n",
+    "| $$4500$$ | $$1000$$ | $$1,000,000$$ |\n",
+    "| $$4500$$ | $$1000$$ | $$1,000,000$$ |\n",
+    "| $$5000$$ | $$1500$$ | $$2,250,000$$ |\n",
+    "| $$6000$$ | $$2500$$ | $$36,000,000$$ |\n",
     "\n",
-    "Now that I have _calculated_ the deviation from the mean for each EC value, I will __square__ these deviations in the following table:\n",
-    "\n",
-    "<!-- Energy consumption table -->\n",
-    "| $$Robot Arm Model 1$$| $$m_s = 3500$$ |  |\n",
-    "| -----| ------| ------|\n",
-    "| $$x_s$$ | $$(x_s - m_s)^2$$ |\n",
-    "| $$1500$$ | $$4,000,000$$ |\n",
-    "| $$1700$$ | $$3,240,000$$ |\n",
-    "| $$2000$$ | $$2,250,000$$ |\n",
-    "| $$3000$$ | $$250,000$$ |\n",
-    "| $$3200$$ | $$90,000$$ |\n",
-    "| $$3600$$ | $$10,000$$ |\n",
-    "| $$4500$$ | $$1,000,000$$ |\n",
-    "| $$4500$$ | $$1,000,000$$ |\n",
-    "| $$5000$$ | $$2,250,000$$ |\n",
-    "| $$6000$$ | $$36,000,000$$ |\n",
     "\n",
     "Now I will _sum_ the __squared deviation:__\n",
     "\n",
