--- a/Robot_Arm_Research.ipynb
+++ b/Robot_Arm_Research.ipynb
@@ -486,12 +486,21 @@
     "\n",
     "Now I will _sum_ the __squared deviation:__\n",
     "\n",
-    "$$ \\sigma_s = \\sqrt{ \\Sigma(x_s-m_s)^2 \\over n} \n",
-    "= \\sqrt{ 50,090,000 \\over 10} \n",
+    "$$ \\sigma_s = \\sqrt{ \\Sigma(x_s-m_s)^2 \\over n-1} \n",
+    "= \\sqrt{ 50,090,000 \\over 10-1} \n",
     "\\approx 5,565,555W\n",
     "$$\n",
     "\n",
-    "$$ mean = 5009 kWh$$"
+    "This means that the robot arm out of these __10__ _samples_ will __consume__ a total of:\n",
+    "\n",
+    "$$ 5 565, 555 kWh$$\n",
+    "\n",
+    "__over an 8-hour operating period for 3 months.__ In this case it is __HIGH__, and it needs to be looked into.\n",
+    "\n",
+    "By calculating the __standard deviation__ of EC for the robot arm, I can:\n",
+    "- __Identify inefficiencies__: If the standard deviation of energy consumption is __high__, it may __indicate__ that there are __inefficiencies__ in the robot arm's operation that are causing energy waste. This can help identify areas for improvement in the robot arm's programming or operation.\n",
+    "- __Monitor performance__: Monitoring the EC over time can help track the performance of the robot arm and ensure that it is operating consistently and predictably.\n",
+    "- __Improve energy efficiency__: By identifying patterns in EC and making changes to the robot's operation, I can potentially reduce energy waste and improve overall energy efficiency."
    ]
   },
   {
